optimizeLegibility isn't a default setting anymore due to some render issues it can cause

--- a/stylesheets/_reset.scss
+++ b/stylesheets/_reset.scss
@@ -138,9 +138,6 @@
   }
 
   body {
-    // Optimize text rendering for modern browsers
-    @include text-optimize-legibility;
-
     line-height: 1;
     color: black;
     background: white;
